[package]
name = "renkit"
version = "5.1.0-alpha.1"
edition = "2021"
repository = "https://github.com/kobaltcore/renkit"
description = "A collection of tools to help you organise and use Ren'Py instances from the command line."
homepage = "https://github.com/kobaltcore/renkit"

[dependencies]
# System
zip = "3.0.0"
rsa = "0.9.8"
rand = "0.8"
regex = "1.11.1"
base64 = "0.22.1"
anyhow = "1.0.98"
num_cpus = "1.16.0"
itertools = "0.14.0"
command-executor = "0.1.1"
tokio = { version = "1.45.0", features = ["full"] }
# this is only here because it doesn't enable profileapi
# as a feature by default, breaking the build on windows
winapi = { version = "0.3.9", features = ["profileapi"] }
# Parsing
toml = "0.8.22"
plist = "1.7.1"
lol_html = "2.3.0"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
# Filesystem
home = "0.5.11"
tar = "0.4.44"
bzip2 = "0.5.2"
jwalk = "0.8.1"
zip-extract = "0.3.0"
# Internet
trauma = "2"
webbrowser = "1.0.4"
reqwest = { version = "^0.12.15", default-features = false, features = [
    "native-tls-vendored",
] }
# Apple
apple-bundles = "0.21.0"
apple-codesign = "0.29.0"
x509-certificate = "0.24.0"
app-store-connect = "0.7.0"
# CLI
ratatui = "0.29.0"
crossterm = "0.28"
wait-timeout = "0.2.1"
tui-textarea = "0.7.0"
tui-scrollview = "0.5.1"
clap = { version = "4.5.38", features = ["derive"] }
indicatif = { version = "0.17.11", features = ["improved_unicode", "rayon"] }
# Images
image = "0.25.6"
rgb = "0.8.50"
imgref = "1.11.0"
ravif = { version = "0.11.12", features = [
    "threading",
], default-features = false }
webp = "0.3.0"
libwebp-sys = { version = "0.9.6", features = ["avx2", "sse41"] }
# jpegxl-rs = { version = "0.8.3", features = ["vendored"] }
# RustPython
rustpython-vm = "0.4.0"
rustpython-stdlib = "0.4.0"
rustpython = { version = "0.4.0", features = ["freeze-stdlib"] }
rustpython-pylib = { version = "0.4.0", features = ["freeze-stdlib"] }

[dev-dependencies]
test-context = "0.4.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
strip = true

[profile.release]
strip = true
