[package]
name = "renkit"
version = "6.1.0-alpha.1"
edition = "2024"
repository = "https://github.com/kobaltcore/renkit"
description = "A collection of tools to help you organise and use Ren'Py instances from the command line."
homepage = "https://github.com/kobaltcore/renkit"

[dependencies]
# System
zip = "6.0.0"
rsa = "0.9.9"
rand = "0.8"
regex = "1.12.2"
base64 = "0.22.1"
anyhow = "1.0.100"
num_cpus = "1.17.0"
itertools = "0.14.0"
command-executor = "0.2.0"
tokio = { version = "1.48.0", features = ["full"] }
# this is only here because it doesn't enable profileapi
# as a feature by default, breaking the build on windows
# winapi = { version = "0.3.9", features = ["profileapi"] }
# Parsing
toml = "0.9.8"
plist = "1.8.0"
lol_html = "2.7.0"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
# Filesystem
home = "0.5.12"
tar = "0.4.44"
bzip2 = "0.6.1"
jwalk = "0.8.1"
# Internet
trauma = "2"
webbrowser = "1.0.6"
reqwest = { version = "^0.12.24", default-features = false, features = [
    "native-tls-vendored",
] }
# Apple
apple-bundles = "0.21.0"
apple-codesign = "0.29.0"
x509-certificate = "0.24.0"
app-store-connect = "0.7.0"
# CLI
clap = { version = "4.5.53", features = ["derive"] }
indicatif = { version = "0.18.3", features = ["improved_unicode", "rayon"] }
# Images
image = "0.25.9"
rgb = "0.8.52"
imgref = "1.12.0"
ravif = { version = "0.12.0", features = [
    "threading",
], default-features = false }
webp = "0.3.1"
libwebp-sys = { version = "0.9", features = ["avx2", "sse41"] }
# jpegxl-rs = { version = "0.8.3", features = ["vendored"] }
# RustPython
rustpython-vm = "0.4.0"
rustpython-stdlib = "0.4.0"
rustpython = { version = "0.4.0", features = ["freeze-stdlib"] }
rustpython-pylib = { version = "0.4.0", features = ["freeze-stdlib"] }

[dev-dependencies]
test-context = "0.5.4"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
strip = true

[profile.release]
strip = true
